--- a/style.css
+++ b/style.css
@@ -12,3 +12,22 @@ body
   background-color: darkslategrey;
   color : white;
 }
+
+.container
+{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.sub-container
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 80vh;
+  background-color:darkcyan;
+}
+
